--- a/TFG (beta).ipynb
+++ b/TFG (beta).ipynb
@@ -39,7 +39,8 @@
     "\n",
     "import sys\n",
     "import os\n",
-    "import re"
+    "import re\n",
+    "import random"
    ]
   },
   {
@@ -63,8 +64,12 @@
     "\n",
     "def cargaDB2(session):\n",
     "    session.execute(\"create db osm\")\n",
+    "    arch = ['MT-OSM-master/TAGS/datasets/Madrid/map.osm','MT-OSM-master/TAGS/datasets/SaoPaolo/map.osm',\n",
+    "           'MT-OSM-master/TAGS/datasets/London/map.osm']\n",
+    "    nrandom = random.randint(0, 3)\n",
+    "    \n",
     "    try:\n",
-    "        with open('MT-OSM-master/TAGS/datasets/Madrid/map.osm', 'rb') as f:\n",
+    "        with open(arch[nrandom], 'rb') as f:\n",
     "            contenido = f.read()\n",
     "            session.add(\"map.osm\", contenido.decode())\n",
     "        # Imprimir un mensaje de confirmación\n",
@@ -146,18 +151,16 @@
     "    generar_mapa(resultado[\"lat\"], resultado[\"lon\"], 16)\n",
     "\n",
     "# Busca los errores en el mapa\n",
-    "def MtGeometry(session, func):\n",
+    "def MtGeometry(session, func, nombreCalle):\n",
     "    r = []\n",
     "    module_namespace = 'mt'\n",
     "    module_path = 'MT-OSM-master\\GEOMETRY\\src\\mt-osm-geometry.xqm'\n",
     "    inp = f\"import module namespace mt = '{module_namespace}' at '{module_path}';\"\n",
     "    \n",
-    "    for f in func:\n",
-    "        inp += 'mt:' + f + '(.,\"\",())'\n",
-    "        result = session.query(inp)\n",
-    "        r += result.execute()\n",
-    "        inp = f\"import module namespace mt = '{module_namespace}' at '{module_path}';\"\n",
-    " \n",
+    "    inp += 'mt:' + func + '(.,\"' + nombreCalle + '\",())'\n",
+    "    result = session.query(inp)\n",
+    "    r += result.execute()\n",
+    "\n",
     "    return r\n",
     "\n",
     "# Dado un id de NODO calcula su latitud y longitud\n",
@@ -172,10 +175,10 @@
     "    return lat, lon\n",
     "\n",
     "# Marca los puntos del resultado de la consulta\n",
-    "def marcaPuntos(result, tipo):\n",
+    "def marcaPuntos(result, tipo, i, mapa):\n",
     "    # Generamos un nuevo mapa ya que no tenemos acceso al que se muestra\n",
-    "    mapa = folium.Map(location=[40.4168, -3.7038], zoom_start=13)\n",
-    "    \n",
+    "    colors = ['orange', 'green', 'blue', 'red', 'black', 'cadetblue', 'gray', 'purple', 'pink']\n",
+    "   \n",
     "    errores = \"- \" + tipo + \"\\n\"\n",
     "    nombre_calle = \"\"\n",
     "    #Compacta el string en un xml\n",
@@ -201,14 +204,13 @@
     "        errores += \" | \" + nombre_calle + \"\\n\"\n",
     "        \n",
     "        #Marca un punto en el mapa dado una [latitud, longitud]\n",
-    "        folium.Marker(location=[lat, lon], popup=tipo).add_to(mapa)\n",
-    "        \n",
-    "        \n",
-    "    # Guardamos el nuevo mapa marcado para mostrarlo\n",
-    "    mapa.fit_bounds(mapa.get_bounds())\n",
-    "    mapa.save('mapaR.html')  \n",
+    "        folium.Marker(location=[lat, lon], icon=folium.Icon(color=colors[i]), popup=tipo).add_to(mapa)\n",
+    "         \n",
     "    \n",
-    "    return xml_string, errores\n",
+    "    xmlS = \"- \" + tipo + \"\\n\"\n",
+    "    xmlS += xml_string\n",
+    "    \n",
+    "    return xmlS, errores, mapa\n",
     "\n",
     "# Dibuja en m el área que definen las coordenadas\n",
     "def dibujarArea(coordenadas, m):\n",
@@ -263,6 +265,13 @@
     "strXml = \"\"\n",
     "    \n",
     "def filtros_seleccionados(checkboxes, nombresT):\n",
+    "    global strErrores\n",
+    "    global strXml\n",
+    "    strErrores = \"\"\n",
+    "    strXml = \"\"\n",
+    "    it = 0\n",
+    "    mapa = folium.Map(location=[40.4168, -3.7038], zoom_start=13)\n",
+    "    \n",
     "    filtros_seleccionados = []\n",
     "    for i, checkbox in enumerate(checkboxes):\n",
     "        if checkbox.isChecked():\n",
@@ -272,13 +281,27 @@
     "    else:\n",
     "        session = BaseXClient.Session('localhost', 1984, 'admin', 'admin')\n",
     "        cargaDB2(session)\n",
-    "        r = MtGeometry(session, filtros_seleccionados)\n",
-    "        xml, errores = marcaPuntos(r, filtros_seleccionados[0])\n",
+    "        # Ejecutar la consulta XQuery para obtener el valor del atributo \"ref\" del primer \"nd\"\n",
+    "        query = session.query(\"let $doc := doc('osm') return string(($doc//way)[1]/tag[@k='name']/@v)\")\n",
+    "        result = query.execute()\n",
+    "\n",
+    "        # Obtener el resultado como una cadena de texto\n",
+    "        nombreCalle = result.strip()\n",
+    "        \n",
+    "        for fil in filtros_seleccionados:\n",
+    "            \n",
+    "            r = MtGeometry(session, fil, nombreCalle)\n",
+    "            xml, errores, mapa = marcaPuntos(r, fil, it, mapa)\n",
+    "            strErrores += errores\n",
+    "            strXml += xml + \"\\n\"\n",
+    "            strXml += \"----------------------------\" + \"\\n\"\n",
+    "            strErrores += \"----------------------------\" + \"\\n\"\n",
+    "            it+=1\n",
+    "            \n",
+    "        # Guardamos el nuevo mapa marcado para mostrarlo\n",
+    "        mapa.fit_bounds(mapa.get_bounds())\n",
+    "        mapa.save('mapaR.html') \n",
     "        session.close()\n",
-    "        global strErrores\n",
-    "        strErrores = errores\n",
-    "        global strXml\n",
-    "        strXml = xml\n",
     "    \n",
     "def zona_busqueda(lista2):\n",
     "        botones_seleccionados = lista2.checkedButton()\n",
@@ -901,15 +924,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9eda4740",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mapa OSM cargado en BaseX\n"
+      "Mapa OSM cargado en BaseX\n",
+      "Botón seleccionado: Centrar búsqueda en posición original\n",
+      "Mapa OSM cargado en BaseX\n",
+      "Botón seleccionado: Centrar búsqueda en posición original\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tyson\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3386: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -947,7 +992,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m session\u001b[38;5;241m.\u001b[39mclose()\n",
+      "Cell \u001b[1;32mIn [1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43msession\u001b[49m\u001b[38;5;241m.\u001b[39mclose()\n",
       "\u001b[1;31mNameError\u001b[0m: name 'session' is not defined"
      ]
     }
