--- a/TFG (beta).ipynb
+++ b/TFG (beta).ipynb
@@ -66,14 +66,23 @@
     "    session.execute(\"create db osm\")\n",
     "    arch = ['MT-OSM-master/TAGS/datasets/Madrid/map.osm','MT-OSM-master/TAGS/datasets/SaoPaolo/map.osm',\n",
     "           'MT-OSM-master/TAGS/datasets/London/map.osm']\n",
-    "    nrandom = random.randint(0, 3)\n",
+    "    nrandom = random.randint(0, 2)\n",
     "    \n",
     "    try:\n",
     "        with open(arch[nrandom], 'rb') as f:\n",
     "            contenido = f.read()\n",
     "            session.add(\"map.osm\", contenido.decode())\n",
+    "            query = session.query(\"let $doc := doc('osm') return string(($doc//way)[1]/tag[@k='name']/@v)\")\n",
+    "            result = query.execute()\n",
+    "\n",
+    "    # Obtener el resultado como una cadena de texto\n",
+    "            nombreCalle = result.strip()\n",
+    "    \n",
+    "            \n",
     "        # Imprimir un mensaje de confirmación\n",
     "        print(\"Mapa OSM cargado en BaseX\")\n",
+    "        return nombreCalle\n",
+    "    \n",
     "    except Exception as e:\n",
     "          # Imprimir un mensaje de error si hay un problema\n",
     "          print(\"Error al cargar el mapa OSM en BaseX:\", e)\n",
@@ -122,7 +131,51 @@
     "            print(\"Error al cargar los datos OSM en BaseX:\", e)\n",
     "    else:\n",
     "        print(\"Error al descargar los datos OSM desde Overpass API\")\n",
+    "        \n",
+    "def cargaDBcalle(nombre_calle, session):\n",
+    "    # Consulta Overpass para obtener los nodos de la calle por nombre\n",
+    "    consulta = f\"\"\"\n",
+    "    [out:xml];\n",
+    "    way[\"name\"=\"{nombre_calle}\"];\n",
+    "    (._;>;);\n",
+    "    out;\n",
+    "    \"\"\"\n",
     "\n",
+    "    # URL de la API de Overpass\n",
+    "    url = \"https://overpass-api.de/api/interpreter\"\n",
+    "\n",
+    "    # Parámetros de la solicitud POST\n",
+    "    parametros = {\n",
+    "        \"data\": consulta\n",
+    "    }\n",
+    "\n",
+    "    # Realizar la solicitud POST a Overpass API\n",
+    "    response = requests.post(url, data=parametros)\n",
+    "\n",
+    "    # Verificar el código de estado de la respuesta\n",
+    "    if response.status_code == 200:\n",
+    "        # Decodificar la respuesta en formato XML\n",
+    "        osm_data = ET.fromstring(response.content)\n",
+    "\n",
+    "        try:\n",
+    "            # Crear una base de datos en BaseX\n",
+    "            session.execute(\"create db osm\")\n",
+    "\n",
+    "            # Convertir el objeto Element a una cadena\n",
+    "            osm_data_str = ET.tostring(osm_data, encoding=\"unicode\", method=\"xml\")\n",
+    "\n",
+    "            # Añadir el contenido XML a la base de datos\n",
+    "            session.add(\"map.osm\", osm_data_str)\n",
+    "\n",
+    "            # Imprimir un mensaje de confirmación\n",
+    "            print(f\"Nodos de la calle '{nombre_calle}' cargados en BaseX\")\n",
+    "        except Exception as e:\n",
+    "            # Imprimir un mensaje de error si hay un problema\n",
+    "            print(f\"Error al cargar los nodos de la calle '{nombre_calle}' en BaseX:\", e)\n",
+    "    else:\n",
+    "        print(f\"Error al descargar los nodos de la calle '{nombre_calle}' desde Overpass API\")\n",
+    "\n",
+    "        \n",
     "def meterMapa(session):\n",
     "    # Seleccionamos el archivo\n",
     "    raiz = Tk()\n",
@@ -149,6 +202,8 @@
     "    resultado = respuesta.json()[0]\n",
     "    # Metemos las coordenadas en el mapa\n",
     "    generar_mapa(resultado[\"lat\"], resultado[\"lon\"], 16)\n",
+    "    \n",
+    "    return resultado[\"lat\"], resultado[\"lon\"]\n",
     "\n",
     "# Busca los errores en el mapa\n",
     "def MtGeometry(session, func, nombreCalle):\n",
@@ -219,7 +274,9 @@
     "        if i == len(coordenadas) - 1:\n",
     "            folium.PolyLine(locations=[coordenadas[i], coordenadas[0]]).add_to(m)\n",
     "        folium.PolyLine(locations=[coordenadas[i], coordenadas[i-1]]).add_to(m)\n",
-    "        i+=1"
+    "        i+=1\n",
+    "        \n",
+    "session = \"\""
    ]
   },
   {
@@ -267,6 +324,8 @@
     "def filtros_seleccionados(checkboxes, nombresT):\n",
     "    global strErrores\n",
     "    global strXml\n",
+    "    global session\n",
+    "    \n",
     "    strErrores = \"\"\n",
     "    strXml = \"\"\n",
     "    it = 0\n",
@@ -279,8 +338,6 @@
     "    if len(filtros_seleccionados)==0:\n",
     "        mensaje_Error();\n",
     "    else:\n",
-    "        session = BaseXClient.Session('localhost', 1984, 'admin', 'admin')\n",
-    "        cargaDB2(session)\n",
     "        # Ejecutar la consulta XQuery para obtener el valor del atributo \"ref\" del primer \"nd\"\n",
     "        query = session.query(\"let $doc := doc('osm') return string(($doc//way)[1]/tag[@k='name']/@v)\")\n",
     "        result = query.execute()\n",
@@ -300,8 +357,7 @@
     "            \n",
     "        # Guardamos el nuevo mapa marcado para mostrarlo\n",
     "        mapa.fit_bounds(mapa.get_bounds())\n",
-    "        mapa.save('mapaR.html') \n",
-    "        session.close()\n",
+    "        mapa.save('mapaR.html')\n",
     "    \n",
     "def zona_busqueda(lista2):\n",
     "        botones_seleccionados = lista2.checkedButton()\n",
@@ -531,7 +587,10 @@
     "        self.setLayout(contenedor)\n",
     "        \n",
     "    def ver_mapaD(self):\n",
-    "        mapaD = MapaD(generar_mapa(40.4168, -3.7038, 13))\n",
+    "        global session\n",
+    "        session = BaseXClient.Session('localhost', 1984, 'admin', 'admin')\n",
+    "        nombre = cargaDB2(session)\n",
+    "        mapaD = MapaD(posicionarMapaConCalle(nombre))\n",
     "        self.parent().setCentralWidget(mapaD)\n",
     "        self.close()\n",
     "        \n",
@@ -539,11 +598,11 @@
     "        pedirP = PedirPos(self.parent())\n",
     "        \n",
     "    def cargar_mapa(self):\n",
+    "        global session\n",
     "        session = BaseXClient.Session('localhost', 1984, 'admin', 'admin')\n",
     "        nombre = meterMapa(session)\n",
     "        mapaD = MapaD(posicionarMapaConCalle(nombre))\n",
     "        self.parent().setCentralWidget(mapaD)\n",
-    "        session.close()\n",
     "        self.close()\n",
     "        \n",
     "class PedirPos(QDialog):\n",
@@ -634,6 +693,10 @@
     "        self.direccion.keyPressEvent(evt)\n",
     "        \n",
     "    def enviar_direccion(self, direc):\n",
+    "        global session\n",
+    "        session = BaseXClient.Session('localhost', 1984, 'admin', 'admin')\n",
+    "        lat, lon = posicionarMapaConCalle(direc)\n",
+    "        cargaDBradio(lat, lon, 50, session)\n",
     "        mapaD = MapaD(posicionarMapaConCalle(direc))\n",
     "        ventanaP.setCentralWidget(mapaD)\n",
     "        self.close()\n",
@@ -795,11 +858,20 @@
     "        self.b1.setEnabled(activar)\n",
     "        \n",
     "    def ver_mapaR(self):\n",
-    "        mapaD = MapaR(generar_mapa(40.4168, -3.7038, 13))\n",
+    "        global session\n",
+    "        query = session.query(\"let $doc := doc('osm') return string(($doc//way)[1]/tag[@k='name']/@v)\")\n",
+    "        result = query.execute()\n",
+    "\n",
+    "        # Obtener el resultado como una cadena de texto\n",
+    "        nombre = result.strip()\n",
+    "        \n",
+    "        mapaD = MapaR(posicionarMapaConCalle(nombre))\n",
     "        self.parent().setCentralWidget(mapaD)\n",
     "        self.close()\n",
     "        \n",
     "    def ver_menu(self):\n",
+    "        global session\n",
+    "        session.close()\n",
     "        menu = Menu()\n",
     "        self.parent().setCentralWidget(menu)\n",
     "        self.close()\n",
@@ -897,11 +969,20 @@
     "        self.setLayout(main)\n",
     "        \n",
     "    def ver_mapaD(self):\n",
-    "        mapaD = MapaD(generar_mapa(40.4168, -3.7038, 13))\n",
+    "        global session\n",
+    "        query = session.query(\"let $doc := doc('osm') return string(($doc//way)[1]/tag[@k='name']/@v)\")\n",
+    "        result = query.execute()\n",
+    "\n",
+    "        # Obtener el resultado como una cadena de texto\n",
+    "        nombre = result.strip()\n",
+    "        \n",
+    "        mapaD = MapaD(posicionarMapaConCalle(nombre))\n",
     "        self.parent().setCentralWidget(mapaD)\n",
     "        self.close()\n",
     "        \n",
     "    def ver_menu(self):\n",
+    "        global session\n",
+    "        session.close()\n",
     "        menu = Menu()\n",
     "        self.parent().setCentralWidget(menu)\n",
     "        self.close()\n",
@@ -924,40 +1005,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9eda4740",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mapa OSM cargado en BaseX\n",
-      "Botón seleccionado: Centrar búsqueda en posición original\n",
-      "Mapa OSM cargado en BaseX\n",
-      "Botón seleccionado: Centrar búsqueda en posición original\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\tyson\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3386: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#MAIN\n",
     "if __name__ == '__main__':\n",
@@ -992,7 +1045,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43msession\u001b[49m\u001b[38;5;241m.\u001b[39mclose()\n",
+      "Cell \u001b[1;32mIn [1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m session\u001b[38;5;241m.\u001b[39mclose()\n",
       "\u001b[1;31mNameError\u001b[0m: name 'session' is not defined"
      ]
     }
