--- a/TFG (beta).ipynb
+++ b/TFG (beta).ipynb
@@ -1005,12 +1005,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9eda4740",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapa OSM cargado en BaseX\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'PedirPos' object has no attribute 'direccion'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [4], line 316\u001b[0m, in \u001b[0;36mPedirPos.keyPressEvent\u001b[1;34m(self, evt)\u001b[0m\n\u001b[0;32m    315\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mkeyPressEvent\u001b[39m(\u001b[38;5;28mself\u001b[39m, evt):\n\u001b[1;32m--> 316\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdireccion\u001b[49m\u001b[38;5;241m.\u001b[39msetFocus()\n\u001b[0;32m    317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdireccion\u001b[38;5;241m.\u001b[39mkeyPressEvent(evt)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'PedirPos' object has no attribute 'direccion'"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'PedirPos' object has no attribute 'direccion'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [4], line 316\u001b[0m, in \u001b[0;36mPedirPos.keyPressEvent\u001b[1;34m(self, evt)\u001b[0m\n\u001b[0;32m    315\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mkeyPressEvent\u001b[39m(\u001b[38;5;28mself\u001b[39m, evt):\n\u001b[1;32m--> 316\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdireccion\u001b[49m\u001b[38;5;241m.\u001b[39msetFocus()\n\u001b[0;32m    317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdireccion\u001b[38;5;241m.\u001b[39mkeyPressEvent(evt)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'PedirPos' object has no attribute 'direccion'"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'PedirPos' object has no attribute 'direccion'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [4], line 316\u001b[0m, in \u001b[0;36mPedirPos.keyPressEvent\u001b[1;34m(self, evt)\u001b[0m\n\u001b[0;32m    315\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mkeyPressEvent\u001b[39m(\u001b[38;5;28mself\u001b[39m, evt):\n\u001b[1;32m--> 316\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdireccion\u001b[49m\u001b[38;5;241m.\u001b[39msetFocus()\n\u001b[0;32m    317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdireccion\u001b[38;5;241m.\u001b[39mkeyPressEvent(evt)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'PedirPos' object has no attribute 'direccion'"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'PedirPos' object has no attribute 'direccion'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [4], line 316\u001b[0m, in \u001b[0;36mPedirPos.keyPressEvent\u001b[1;34m(self, evt)\u001b[0m\n\u001b[0;32m    315\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mkeyPressEvent\u001b[39m(\u001b[38;5;28mself\u001b[39m, evt):\n\u001b[1;32m--> 316\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdireccion\u001b[49m\u001b[38;5;241m.\u001b[39msetFocus()\n\u001b[0;32m    317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdireccion\u001b[38;5;241m.\u001b[39mkeyPressEvent(evt)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'PedirPos' object has no attribute 'direccion'"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'PedirPos' object has no attribute 'direccion'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [4], line 316\u001b[0m, in \u001b[0;36mPedirPos.keyPressEvent\u001b[1;34m(self, evt)\u001b[0m\n\u001b[0;32m    315\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mkeyPressEvent\u001b[39m(\u001b[38;5;28mself\u001b[39m, evt):\n\u001b[1;32m--> 316\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdireccion\u001b[49m\u001b[38;5;241m.\u001b[39msetFocus()\n\u001b[0;32m    317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdireccion\u001b[38;5;241m.\u001b[39mkeyPressEvent(evt)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'PedirPos' object has no attribute 'direccion'"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'PedirPos' object has no attribute 'direccion'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [4], line 316\u001b[0m, in \u001b[0;36mPedirPos.keyPressEvent\u001b[1;34m(self, evt)\u001b[0m\n\u001b[0;32m    315\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mkeyPressEvent\u001b[39m(\u001b[38;5;28mself\u001b[39m, evt):\n\u001b[1;32m--> 316\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdireccion\u001b[49m\u001b[38;5;241m.\u001b[39msetFocus()\n\u001b[0;32m    317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdireccion\u001b[38;5;241m.\u001b[39mkeyPressEvent(evt)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'PedirPos' object has no attribute 'direccion'"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapa OSM cargado en BaseX\n",
+      "Botón seleccionado: Centrar búsqueda en posición original\n",
+      "Botón seleccionado: Centrar búsqueda en posición original\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tyson\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3386: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
     "#MAIN\n",
     "if __name__ == '__main__':\n",
