--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -224,6 +224,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d4e310e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cargaDBcalle(nombre_calle, session):\n",
+    "    # Consulta Overpass para obtener los nodos de la calle por nombre\n",
+    "    consulta = f\"\"\"\n",
+    "    [out:xml];\n",
+    "    way[\"name\"=\"{nombre_calle}\"];\n",
+    "    (._;>;);\n",
+    "    out;\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # URL de la API de Overpass\n",
+    "    url = \"https://overpass-api.de/api/interpreter\"\n",
+    "\n",
+    "    # Parámetros de la solicitud POST\n",
+    "    parametros = {\n",
+    "        \"data\": consulta\n",
+    "    }\n",
+    "\n",
+    "    # Realizar la solicitud POST a Overpass API\n",
+    "    response = requests.post(url, data=parametros)\n",
+    "\n",
+    "    # Verificar el código de estado de la respuesta\n",
+    "    if response.status_code == 200:\n",
+    "        # Decodificar la respuesta en formato XML\n",
+    "        osm_data = ET.fromstring(response.content)\n",
+    "\n",
+    "        try:\n",
+    "            # Crear una base de datos en BaseX\n",
+    "            session.execute(\"create db osm\")\n",
+    "\n",
+    "            # Convertir el objeto Element a una cadena\n",
+    "            osm_data_str = ET.tostring(osm_data, encoding=\"unicode\", method=\"xml\")\n",
+    "\n",
+    "            # Añadir el contenido XML a la base de datos\n",
+    "            session.add(\"map.osm\", osm_data_str)\n",
+    "\n",
+    "            # Imprimir un mensaje de confirmación\n",
+    "            print(f\"Nodos de la calle '{nombre_calle}' cargados en BaseX\")\n",
+    "        except Exception as e:\n",
+    "            # Imprimir un mensaje de error si hay un problema\n",
+    "            print(f\"Error al cargar los nodos de la calle '{nombre_calle}' en BaseX:\", e)\n",
+    "    else:\n",
+    "        print(f\"Error al descargar los nodos de la calle '{nombre_calle}' desde Overpass API\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "75079342",
    "metadata": {},
